# SDL-GPU-test

./: CMakeLists.txt
Shaders/: PositionTextureVertex.vert  PositionTextureVertex.vert.spv  Texture.frag  Texture.frag.spv  TextureAlphaDiscard.frag  TextureAlphaDiscard.frag.spv
src/: Environment.hpp  Implement.cpp  Math.cpp  Math.hpp  Structs.hpp  main.cpp
